# SeeHandshake

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  attribution.md  development.md  packaging.md  tls13-visibility.md
examples/: parse_recorded.rs
packaging/aur/: .SRCINFO  PKGBUILD
src/: cli.rs  error.rs  lib.rs  main.rs
src/capture/: frame.rs  interfaces.rs  live.rs  mod.rs
src/model/: connection.rs  handshake.rs  mod.rs  record.rs  tls.rs
src/origin/: linux.rs  mod.rs  other.rs
src/parser/: extensions.rs  handshake.rs  mod.rs  record.rs
src/tracker/: mod.rs  reassembly.rs
src/ui/: app.rs  education.rs  event.rs  mod.rs  sections.rs
src/ui/panels/: connections.rs  diagram.rs  flow.rs  metadata.rs  mod.rs  records.rs  right.rs
src/util/: mod.rs
tests/: cli.rs  parser_integration.rs
tests/data/: README.md
