[package]
name = "seehandshake"
version = "1.0.4"
edition = "2021"
rust-version = "1.74"
authors = ["SeeHandshake contributors"]
license = "MIT"
description = "Visualize TLS handshakes in your terminal, in real time."
readme = "README.md"
repository = "https://github.com/AustinJAkerley/SeeHandshake"
homepage = "https://github.com/AustinJAkerley/SeeHandshake"
documentation = "https://docs.rs/seehandshake"
keywords = ["tls", "network", "handshake", "tui", "security"]
categories = ["command-line-utilities", "network-programming", "visualization"]

[lib]
name = "seehandshake"
path = "src/lib.rs"

[[bin]]
name = "seehandshake"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
pcap = "2.4"
etherparse = "0.20"
tls-parser = "0.12"
x509-parser = "0.18"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[package.metadata.deb]
section = "net"
priority = "optional"
maintainer = "Austin Akerley <austin.akerley+SeeHandshake@outlook.com>"
# `$auto` lets cargo-deb resolve shared-library deps (libpcap, libc) via
# dpkg-shlibdeps against the built binary, which picks the right package name
# across releases (e.g. libpcap0.8 vs the time64 libpcap0.8t64 on newer Ubuntu).
depends = "$auto"
extended-description = """\
seehandshake is a passive TLS handshake observer for the terminal. \
It captures packets on a chosen network interface, reassembles TLS \
records off the TCP stream, and renders each connection in a three-panel \
Ratatui interface with an optional educational overlay."""
assets = [
    ["target/release/seehandshake", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/seehandshake/README", "644"],
    ["LICENSE", "usr/share/doc/seehandshake/copyright", "644"],
    ["CHANGELOG.md", "usr/share/doc/seehandshake/changelog", "644"],
]
